--- a/sass/_single-page-of-products.scss
+++ b/sass/_single-page-of-products.scss
@@ -323,6 +323,23 @@
 		}
 	}
 
+	.delete-block {
+		overflow: hidden;
+		margin: 15px auto;
+
+		.delete-btn {
+			display: block;
+			float: right;
+			width: 75px;
+			padding: 8px 15px;
+			color: #ffffff;
+			font: 400 16px / 22px $Arial;
+			border-radius: 4px;
+			border: 1px solid #723b0b;
+			background-image: linear-gradient(to top, #b54209 0%, #f36e16 100%);
+		}
+	}
+
 	.for-seo-toolbar {
 		margin: 0;
 		padding: 65px 0 50px;
