--- a/stylesheets/main-styles.css
+++ b/stylesheets/main-styles.css
@@ -2251,53 +2251,60 @@ a {
 .single-product-page-preffoter .preffoter-content-bg .for-product-name-title .product-name span {
   display: block;
 }
-/* line 79, ../sass/_single-page-of-products.scss */
+/* line 78, ../sass/_single-page-of-products.scss */
+.single-product-page-preffoter .preffoter-content-bg .single-product-slider {
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  color: transparent;
+}
+/* line 83, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider .wrapper {
   max-width: 100%;
   padding: 0;
 }
-/* line 83, ../sass/_single-page-of-products.scss */
+/* line 87, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #thumbnail-slider {
   display: none;
 }
-/* line 87, ../sass/_single-page-of-products.scss */
+/* line 91, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider {
   margin: 15px 0 8px;
   width: 100%;
   height: auto;
   background: none;
 }
-/* line 93, ../sass/_single-page-of-products.scss */
+/* line 97, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider #ninja-slider-prev,
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider #ninja-slider-next {
   background: rgba(46, 46, 46, 0.8);
 }
-/* line 98, ../sass/_single-page-of-products.scss */
+/* line 102, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider ul {
   height: 402px !important;
   padding: 0 !important;
 }
-/* line 102, ../sass/_single-page-of-products.scss */
+/* line 106, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider ul li .ns-img {
   background-size: cover;
 }
-/* line 106, ../sass/_single-page-of-products.scss */
+/* line 110, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider ul li .edit-big {
   position: absolute;
   top: 10px;
   right: 15px;
   z-index: 2;
 }
-/* line 114, ../sass/_single-page-of-products.scss */
+/* line 118, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider .fs-icon {
   display: none;
 }
-/* line 121, ../sass/_single-page-of-products.scss */
+/* line 125, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .navigation .wrapper {
   max-width: 100%;
   padding: 0;
 }
-/* line 126, ../sass/_single-page-of-products.scss */
+/* line 130, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .navigation .add-more {
   display: block;
   float: right;
@@ -2305,7 +2312,7 @@ a {
   color: #d15610;
   font: 700 25px/28px "Arial", sans-serif;
 }
-/* line 135, ../sass/_single-page-of-products.scss */
+/* line 139, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav {
   display: -webkit-box;
   display: -moz-box;
@@ -2319,12 +2326,12 @@ a {
   clear: both;
   overflow: hidden;
 }
-/* line 148, ../sass/_single-page-of-products.scss */
+/* line 152, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size {
   width: 49%;
 }
-/* line 152, ../sass/_single-page-of-products.scss */
+/* line 156, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .block-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .block-title {
   margin: 0;
@@ -2333,25 +2340,25 @@ a {
   font: 700 30px/32px "Arial", sans-serif;
   background-color: #b9b9b9;
 }
-/* line 160, ../sass/_single-page-of-products.scss */
+/* line 164, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .for-edit-block-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .for-edit-block-title {
   background-color: #b9b9b9;
   overflow: hidden;
 }
-/* line 164, ../sass/_single-page-of-products.scss */
+/* line 168, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .for-edit-block-title .block-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .for-edit-block-title .block-title {
   float: left;
   margin: 0 10px 0 0;
 }
-/* line 168, ../sass/_single-page-of-products.scss */
+/* line 172, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .for-edit-block-title .edit-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .for-edit-block-title .edit-title {
   float: left;
   margin: 10px 0 0;
 }
-/* line 175, ../sass/_single-page-of-products.scss */
+/* line 179, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .price-list li,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .size-list li,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .price-list li,
@@ -2361,7 +2368,7 @@ a {
   padding: 10px 0 10px 10px;
   background-color: #ffffff;
 }
-/* line 181, ../sass/_single-page-of-products.scss */
+/* line 185, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .price-list li p,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .size-list li p,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .price-list li p,
@@ -2372,17 +2379,17 @@ a {
   text-transform: uppercase;
   font: 400 30px/32px "Arial", sans-serif;
 }
-/* line 193, ../sass/_single-page-of-products.scss */
+/* line 197, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .size-list li p,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .size-list li p {
   min-width: 60px;
 }
-/* line 201, ../sass/_single-page-of-products.scss */
+/* line 205, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block {
   clear: both;
   padding: 0 15px;
 }
-/* line 205, ../sass/_single-page-of-products.scss */
+/* line 209, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.dropdown {
   max-width: 340px;
   width: 100%;
@@ -2393,30 +2400,30 @@ a {
   border-radius: 0;
   padding: .4em 2.1em .5em 1em;
 }
-/* line 215, ../sass/_single-page-of-products.scss */
+/* line 219, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.dropdown > .text {
   margin: 0 40px 0 0;
   color: #b6b6b6;
   font: 400 25px/28px "Arial", sans-serif;
 }
-/* line 220, ../sass/_single-page-of-products.scss */
+/* line 224, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.dropdown > .dropdown.icon {
   font-size: 2em;
   padding: .1em;
   color: #d15610;
 }
-/* line 225, ../sass/_single-page-of-products.scss */
+/* line 229, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.active.dropdown .menu {
   border-color: #d15610;
   box-shadow: none;
   background-color: #363636;
 }
-/* line 230, ../sass/_single-page-of-products.scss */
+/* line 234, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.dropdown .menu > .item {
   color: #b6b6b6;
   font-family: "Arial", sans-serif;
 }
-/* line 236, ../sass/_single-page-of-products.scss */
+/* line 240, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg #add-category {
   float: right;
   display: block;
@@ -2425,13 +2432,13 @@ a {
   font: 700 25px/28px "Arial", sans-serif;
   cursor: pointer;
 }
-/* line 245, ../sass/_single-page-of-products.scss */
+/* line 249, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product {
   clear: both;
   margin: 0 0 35px;
   padding: 0 15px;
 }
-/* line 251, ../sass/_single-page-of-products.scss */
+/* line 255, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product label {
   display: block;
   overflow: hidden;
@@ -2439,16 +2446,16 @@ a {
   font: 400 20px/22px "Arial", sans-serif;
   cursor: pointer;
 }
-/* line 258, ../sass/_single-page-of-products.scss */
+/* line 262, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product label label {
   overflow: initial;
   display: inline;
 }
-/* line 264, ../sass/_single-page-of-products.scss */
+/* line 268, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product #spec-offers {
   display: none;
 }
-/* line 267, ../sass/_single-page-of-products.scss */
+/* line 271, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product .spec-offers-checkbox-custom {
   position: relative;
   display: block;
@@ -2460,7 +2467,7 @@ a {
   background-color: #ffffff;
   cursor: pointer;
 }
-/* line 278, ../sass/_single-page-of-products.scss */
+/* line 282, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product #spec-offers:checked + .spec-offers-checkbox-custom::before {
   content: "";
   display: block;
@@ -2472,43 +2479,43 @@ a {
   height: 9px;
   background: #d15610;
 }
-/* line 291, ../sass/_single-page-of-products.scss */
+/* line 295, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product {
   clear: both;
   overflow: hidden;
 }
-/* line 294, ../sass/_single-page-of-products.scss */
+/* line 298, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-title {
   overflow: hidden;
 }
-/* line 297, ../sass/_single-page-of-products.scss */
+/* line 301, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-title .descritpion-title {
   float: left;
   margin: 0 15px 14px 0;
   color: #fff;
   font: 700 26px/28px "Arial", sans-serif;
 }
-/* line 304, ../sass/_single-page-of-products.scss */
+/* line 308, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-title .white-edit-title {
   overflow: hidden;
 }
-/* line 312, ../sass/_single-page-of-products.scss */
+/* line 316, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-description .white-edit-title {
   float: right;
 }
-/* line 316, ../sass/_single-page-of-products.scss */
+/* line 320, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-description p {
   clear: both;
   color: #fff;
   font: 400 18px/22px "Arial", sans-serif;
   text-align: justify;
 }
-/* line 326, ../sass/_single-page-of-products.scss */
+/* line 330, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .delete-block {
   overflow: hidden;
   margin: 15px auto;
 }
-/* line 330, ../sass/_single-page-of-products.scss */
+/* line 334, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .delete-block .delete-btn {
   display: block;
   float: right;
@@ -2520,7 +2527,7 @@ a {
   border: 1px solid #723b0b;
   background-image: linear-gradient(to top, #b54209 0%, #f36e16 100%);
 }
-/* line 343, ../sass/_single-page-of-products.scss */
+/* line 347, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .for-seo-toolbar {
   margin: 0;
   padding: 65px 0 50px;
@@ -2529,7 +2536,7 @@ a {
   background-position: center;
   background-size: cover;
 }
-/* line 351, ../sass/_single-page-of-products.scss */
+/* line 355, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .for-seo-toolbar .box-border {
   margin: 0 auto !important;
 }
