--- a/sass/_single-page-of-products.scss
+++ b/sass/_single-page-of-products.scss
@@ -76,10 +76,8 @@
 		}
 
 		.single-product-slider {
-			text-indent: 100%;
-			white-space: nowrap;
-			overflow: hidden;
 			color: rgba(0, 0, 0, 0);
+			font-size: 0;
 			.wrapper {
 				max-width: 100%;
 				padding: 0;
