--- a/stylesheets/main-styles.css
+++ b/stylesheets/main-styles.css
@@ -2253,58 +2253,56 @@ a {
 }
 /* line 78, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider {
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
   color: transparent;
+  font-size: 0;
 }
-/* line 83, ../sass/_single-page-of-products.scss */
+/* line 81, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider .wrapper {
   max-width: 100%;
   padding: 0;
 }
-/* line 87, ../sass/_single-page-of-products.scss */
+/* line 85, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #thumbnail-slider {
   display: none;
 }
-/* line 91, ../sass/_single-page-of-products.scss */
+/* line 89, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider {
   margin: 15px 0 8px;
   width: 100%;
   height: auto;
   background: none;
 }
-/* line 97, ../sass/_single-page-of-products.scss */
+/* line 95, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider #ninja-slider-prev,
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider #ninja-slider-next {
   background: rgba(46, 46, 46, 0.8);
 }
-/* line 102, ../sass/_single-page-of-products.scss */
+/* line 100, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider ul {
   height: 402px !important;
   padding: 0 !important;
 }
-/* line 106, ../sass/_single-page-of-products.scss */
+/* line 104, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider ul li .ns-img {
   background-size: cover;
 }
-/* line 110, ../sass/_single-page-of-products.scss */
+/* line 108, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider ul li .edit-big {
   position: absolute;
   top: 10px;
   right: 15px;
   z-index: 2;
 }
-/* line 118, ../sass/_single-page-of-products.scss */
+/* line 116, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .single-product-slider #ninja-slider .fs-icon {
   display: none;
 }
-/* line 125, ../sass/_single-page-of-products.scss */
+/* line 123, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .navigation .wrapper {
   max-width: 100%;
   padding: 0;
 }
-/* line 130, ../sass/_single-page-of-products.scss */
+/* line 128, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .navigation .add-more {
   display: block;
   float: right;
@@ -2312,7 +2310,7 @@ a {
   color: #d15610;
   font: 700 25px/28px "Arial", sans-serif;
 }
-/* line 139, ../sass/_single-page-of-products.scss */
+/* line 137, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav {
   display: -webkit-box;
   display: -moz-box;
@@ -2326,12 +2324,12 @@ a {
   clear: both;
   overflow: hidden;
 }
-/* line 152, ../sass/_single-page-of-products.scss */
+/* line 150, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size {
   width: 49%;
 }
-/* line 156, ../sass/_single-page-of-products.scss */
+/* line 154, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .block-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .block-title {
   margin: 0;
@@ -2340,25 +2338,25 @@ a {
   font: 700 30px/32px "Arial", sans-serif;
   background-color: #b9b9b9;
 }
-/* line 164, ../sass/_single-page-of-products.scss */
+/* line 162, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .for-edit-block-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .for-edit-block-title {
   background-color: #b9b9b9;
   overflow: hidden;
 }
-/* line 168, ../sass/_single-page-of-products.scss */
+/* line 166, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .for-edit-block-title .block-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .for-edit-block-title .block-title {
   float: left;
   margin: 0 10px 0 0;
 }
-/* line 172, ../sass/_single-page-of-products.scss */
+/* line 170, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .for-edit-block-title .edit-title,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .for-edit-block-title .edit-title {
   float: left;
   margin: 10px 0 0;
 }
-/* line 179, ../sass/_single-page-of-products.scss */
+/* line 177, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .price-list li,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .size-list li,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .price-list li,
@@ -2368,7 +2366,7 @@ a {
   padding: 10px 0 10px 10px;
   background-color: #ffffff;
 }
-/* line 185, ../sass/_single-page-of-products.scss */
+/* line 183, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .price-list li p,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .size-list li p,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .price-list li p,
@@ -2379,17 +2377,17 @@ a {
   text-transform: uppercase;
   font: 400 30px/32px "Arial", sans-serif;
 }
-/* line 197, ../sass/_single-page-of-products.scss */
+/* line 195, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .price .size-list li p,
 .single-product-page-preffoter .preffoter-content-bg .customize-nav .size .size-list li p {
   min-width: 60px;
 }
-/* line 205, ../sass/_single-page-of-products.scss */
+/* line 203, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block {
   clear: both;
   padding: 0 15px;
 }
-/* line 209, ../sass/_single-page-of-products.scss */
+/* line 207, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.dropdown {
   max-width: 340px;
   width: 100%;
@@ -2400,30 +2398,30 @@ a {
   border-radius: 0;
   padding: .4em 2.1em .5em 1em;
 }
-/* line 219, ../sass/_single-page-of-products.scss */
+/* line 217, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.dropdown > .text {
   margin: 0 40px 0 0;
   color: #b6b6b6;
   font: 400 25px/28px "Arial", sans-serif;
 }
-/* line 224, ../sass/_single-page-of-products.scss */
+/* line 222, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.dropdown > .dropdown.icon {
   font-size: 2em;
   padding: .1em;
   color: #d15610;
 }
-/* line 229, ../sass/_single-page-of-products.scss */
+/* line 227, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.active.dropdown .menu {
   border-color: #d15610;
   box-shadow: none;
   background-color: #363636;
 }
-/* line 234, ../sass/_single-page-of-products.scss */
+/* line 232, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .choose-category-block .ui.selection.dropdown .menu > .item {
   color: #b6b6b6;
   font-family: "Arial", sans-serif;
 }
-/* line 240, ../sass/_single-page-of-products.scss */
+/* line 238, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg #add-category {
   float: right;
   display: block;
@@ -2432,13 +2430,13 @@ a {
   font: 700 25px/28px "Arial", sans-serif;
   cursor: pointer;
 }
-/* line 249, ../sass/_single-page-of-products.scss */
+/* line 247, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product {
   clear: both;
   margin: 0 0 35px;
   padding: 0 15px;
 }
-/* line 255, ../sass/_single-page-of-products.scss */
+/* line 253, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product label {
   display: block;
   overflow: hidden;
@@ -2446,16 +2444,16 @@ a {
   font: 400 20px/22px "Arial", sans-serif;
   cursor: pointer;
 }
-/* line 262, ../sass/_single-page-of-products.scss */
+/* line 260, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product label label {
   overflow: initial;
   display: inline;
 }
-/* line 268, ../sass/_single-page-of-products.scss */
+/* line 266, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product #spec-offers {
   display: none;
 }
-/* line 271, ../sass/_single-page-of-products.scss */
+/* line 269, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product .spec-offers-checkbox-custom {
   position: relative;
   display: block;
@@ -2467,7 +2465,7 @@ a {
   background-color: #ffffff;
   cursor: pointer;
 }
-/* line 282, ../sass/_single-page-of-products.scss */
+/* line 280, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .special-offers-product #spec-offers:checked + .spec-offers-checkbox-custom::before {
   content: "";
   display: block;
@@ -2479,43 +2477,43 @@ a {
   height: 9px;
   background: #d15610;
 }
-/* line 295, ../sass/_single-page-of-products.scss */
+/* line 293, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product {
   clear: both;
   overflow: hidden;
 }
-/* line 298, ../sass/_single-page-of-products.scss */
+/* line 296, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-title {
   overflow: hidden;
 }
-/* line 301, ../sass/_single-page-of-products.scss */
+/* line 299, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-title .descritpion-title {
   float: left;
   margin: 0 15px 14px 0;
   color: #fff;
   font: 700 26px/28px "Arial", sans-serif;
 }
-/* line 308, ../sass/_single-page-of-products.scss */
+/* line 306, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-title .white-edit-title {
   overflow: hidden;
 }
-/* line 316, ../sass/_single-page-of-products.scss */
+/* line 314, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-description .white-edit-title {
   float: right;
 }
-/* line 320, ../sass/_single-page-of-products.scss */
+/* line 318, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .preffoter-content-bg .description-product .for-description p {
   clear: both;
   color: #fff;
   font: 400 18px/22px "Arial", sans-serif;
   text-align: justify;
 }
-/* line 330, ../sass/_single-page-of-products.scss */
+/* line 328, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .delete-block {
   overflow: hidden;
   margin: 15px auto;
 }
-/* line 334, ../sass/_single-page-of-products.scss */
+/* line 332, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .delete-block .delete-btn {
   display: block;
   float: right;
@@ -2527,7 +2525,7 @@ a {
   border: 1px solid #723b0b;
   background-image: linear-gradient(to top, #b54209 0%, #f36e16 100%);
 }
-/* line 347, ../sass/_single-page-of-products.scss */
+/* line 345, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .for-seo-toolbar {
   margin: 0;
   padding: 65px 0 50px;
@@ -2536,7 +2534,7 @@ a {
   background-position: center;
   background-size: cover;
 }
-/* line 355, ../sass/_single-page-of-products.scss */
+/* line 353, ../sass/_single-page-of-products.scss */
 .single-product-page-preffoter .for-seo-toolbar .box-border {
   margin: 0 auto !important;
 }
